alinhamento no topo

--- a/pedido-realizado.html
+++ b/pedido-realizado.html
@@ -13,18 +13,18 @@
         <tr>
             <td>
                 <font face="Arial, Helvetica, sans-serif">
-                    <table align="center" border="0" cellpadding="5" cellspacing="0" width="604" bgcolor="#ffffff"
-                        style="border:solid 1px #f7f7f7;">
+                    <table align="center" border="0" cellpadding="5" cellspacing="0" width="610" bgcolor="#ffffff"
+                        style="border: solid 0px #f7f7f7;border-bottom-width: 2px">
                         <tr>
                             <td rowspan="2">logo</td>
                             <td>PEDIDO CONFIRMADO </td>
                         </tr>
                         <tr>
-                            <td style="width:25%">Nº 1234567890</td>
+                            <td style="width:35%">Nº 1234567890</td>
                         </tr>
                     </table>
                     <table align="center" border="0" cellpadding="0" cellspacing="15" width="610" bgcolor="#ffffff"
-                        style="border: solid 0px #f7f7f7;border-bottom-width: 2px;">
+                        style="border: solid 1px #f7f7f7">
                         <tr>
                             <td height="20"></td>
                         </tr>
